<resources>
    <string name="osb_study_id" translatable="false">sage-mpower-2</string>
    <string name="osb_study_name" translatable="false">mPower 2.0</string>
    <string name="app_name">mPower</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_code">Enter Code</string>
    <string name="sms_message">SMS Message</string>
    <string name="button_submit">Submit</string>
    <string name="button_save">Save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_tracking">Tracking</string>
    <string name="title_history">History</string>
    <string name="title_insights">Insights</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_external_id_sign_in">Sign in</string>
    <string name="tracking_tab_title">Tracking</string>
    <string name="measuring_tab_title">Measuring</string>
    <string name="study_burst_day">Day</string>
    <string name="skip_underlined"><u>Skip</u></string>
    <string name="study_burst_1_day_until_next">1 day until next Study Burst</string>
    <string name="study_burst_days_until_next">%s days until next Study Burst</string>
    <string name="study_burst_all_activities_complete">Activities complete</string>
    <string name="study_burst_not_active">No study burst currently active</string>
    <string name="study_burst_action_bar_title">Study Burst</string>
    <string name="study_burst_title_day_1">This is your time!</string>
    <string name="study_burst_title_day_2">You are making a difference!</string>
    <string name="study_burst_title_day_3">Great Job!</string>
    <string name="study_burst_title_day_4">Your input matters!</string>
    <string name="study_burst_title_day_5">Let’s see how you are doing today!</string>
    <string name="study_burst_title_day_6">Thank you!</string>
    <string name="study_burst_title_day_7">You can do it!</string>
    <string name="study_burst_title_day_8">You are fantastic!</string>
    <string name="study_burst_title_day_9">You are on a roll!</string>
    <string name="study_burst_title_day_10">You are amazing!</string>
    <string name="study_burst_title_day_11">Keep up the good work!</string>
    <string name="study_burst_title_day_12">Your contribution is important!</string>
    <string name="study_burst_title_day_13">Every day is a new day!</string>
    <string name="study_burst_title_day_14">This is your time!</string>
    <string name="study_burst_title_day_15">Thank you!</string>
    <string name="study_burst_title_day_16">You can do it!</string>
    <string name="study_burst_title_day_17">You are fantastic!</string>
    <string name="study_burst_title_day_18">You are amazing!</string>
    <string name="study_burst_title_day_19">Your contribution is important!</string>
    <string name="study_burst_message_day_1">Use the daily activities to focus on your health.</string>
    <string name="study_burst_message_day_2">You are contributing to PD research.</string>
    <string name="study_burst_message_day_3">We could not do this study without you.</string>
    <string name="study_burst_message_day_4">Your participation is helping PD research.</string>
    <string name="study_burst_message_day_5">Use the following activities to track your memory &amp; tremors.</string>
    <string name="study_burst_message_day_6">You are helping us make a difference in PD research.</string>
    <string name="study_burst_message_day_7">By completing activities, you can track your daily health.</string>
    <string name="study_burst_message_day_8">Log your medications and symptoms to keep on track.</string>
    <string name="study_burst_message_day_9">The finger tapping activity allows you to see trends in your motor skills.</string>
    <string name="study_burst_message_day_10">We could not do this study without you.</string>
    <string name="study_burst_message_day_11">As you complete activities, check out the trends feature.</string>
    <string name="study_burst_message_day_12">The walking activity provides us with daily data on your gait and balance.</string>
    <string name="study_burst_message_day_13">As you complete more activities, you will be able to see trends &amp; patterns.</string>
    <string name="study_burst_message_day_14">Use the activities to track how you are doing today.</string>
    <string name="study_burst_message_day_15">You are helping us make a difference in PD research.</string>
    <string name="study_burst_message_day_16">By completing activities, you can track your daily health.</string>
    <string name="study_burst_message_day_17">Log your medications and symptoms to keep on track.</string>
    <string name="study_burst_message_day_18">We could not do this study without you.</string>
    <string name="study_burst_message_day_19">The walking activity provides us with daily data on your gait and balance.</string>
    <string name="study_burst_progress_bar_day">Day</string>
    <string name="study_burst_progress_bar_title">Study Burst</string>
    <string name="study_burst_progress_message">Progress expires in</string>
    <string name="task_info_estimated_time_label">%1$d minutes</string>
    <string name="study_burst_activities_to_do">%1$d activities to do</string>
    <string name="study_burst_activity_to_do">1 activity to do</string>
    <string name="study_burst_message_days_missed">In %1$d days you\'ve only missed %2$d Study Burst days!</string>
    <string name="study_burst_message_days_missed_one">In %1$d days you\'ve only missed 1 Study Burst day!</string>
    <string name="set_reminder">Set reminder</string>
    <string name="do_not_send_me_reminders">Do not send me reminders</string>
    <string name="reminder_message">Let\'s set a Reminder for your Study Bursts</string>
    <string name="do_not_remind_me"><u>Do not remind me</u></string>
    <string name="when_do_you_want_a_reminder">When do you want a reminder?</string>
    <string name="remind_me_in_2_hours">Remind me in 2 hours</string>
    <string name="remind_me_in_1_hour">Remind me in 1 hour</string>
    <string name="remind_me_in_15_minutes">Remind me in 15 minutes</string>
    <string name="reminder_title_run_task">Time to complete the %s task</string>
    <string name="reminder_title_study_burst">Time to complete your study burst</string>
    <string name="reminder_notification_channel_id">mPower Channel</string>
    <string name="reminder_notification_channel_title">mPower Reminders</string>
    <string name="reminder_notification_channel_desc">mPower reminders help you remember to log your data</string>
    <string name="foreground_channel_id">mPower Alerts</string>
    <string name="foreground_channel_title">mPower Informational Alerts</string>
    <string name="foreground_channel_desc">mPower low importance informational alerts</string>
    <string name="recording_notification_title">mPower Passive Gait</string>
    <string name="recording_notification_message">Recording...</string>
    <string name="recording_notification_init">Initializing...</string>
    <string name="recording_notification_saving">Saving...</string>
    <string name="recording_notification_canceling">Canceling...</string>
    <string name="monitoring_notification_title">mPower Monitoring</string>
    <string name="monitoring_notification_message">Monitoring movement activity</string>
    <string name="measuring_center_label">Walk And Balance</string>
    <string name="measuring_left_label">Finger Tapping</string>
    <string name="measuring_right_label">Tremor Test</string>
    <string name="tracking_center_label">Medication</string>
    <string name="tracking_left_label">Symptom</string>
    <string name="tracking_right_label">Trigger</string>
    <string name="right_hand_count">Right Hand: %1$d</string>
    <string name="left_hand_count">Left Hand: %1$d</string>
    <plurals name="number_of_doses">
        
        <item quantity="one">%d Dose.</item>
        <item quantity="other">%d Doses.</item>
    </plurals>
    <string name="reminder_post_notifications">Please enable Post Notifications in Settings</string>
    <string name="notification_permissions_asked">NOTIFICATION_PERMISSIONS_ASKED</string>
    <string name="task_plural_term_for_medication">"%1$d Doses"</string>
    <string name="task_plural_term_for_triggers">"%1$d Triggers"</string>
    <string name="task_plural_term_for_symptoms">"%1$d Symptoms"</string>
    <string name="task_plural_term_for_activities">"%1$d Activities"</string>
    <string name="task_singular_term_for_medication">"%1$d Dose"</string>
    <string name="task_singular_term_for_triggers">"%1$d Trigger"</string>
    <string name="task_singular_term_for_symptoms">"%1$d Symptom"</string>
    <string name="task_singular_term_for_activities">"%1$d Activity"</string>
    <string name="remove_medication">Remove medication</string>
    <string name="add_dose">Add another dose</string>
    <string name="remove_dose"><u>Remove</u></string>
    <string name="schedule_title">Schedule</string>
    <string name="schedule_anytime">Take this medication anytime</string>
    <string name="schedule_add_label">Add another schedule</string>
    <string name="dosage_title">Dosage</string>
    <string name="dosage_hint">e.g.: 10/100 mg</string>
    <string name="medication_day_selection_title">On which days do you take %1$s?</string>
    <string name="medication_time_selection_title">At what times do you take %1$s?</string>
    <string name="medication_time_edit_title">At what time did you take %1$s?</string>
    <string name="medication_day_selection_message">Select all that apply</string>
    <string-array name="days_of_the_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="days_of_the_week_short">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="measuring_walk_and_balance_label">Walk And Balance</string>
    <string name="measuring_finger_tapping_label">Finger Tapping</string>
    <string name="measuring_tremor_test_label">Tremor Test</string>
    <string name="measuring_heart_snapshot_label">Heart Snapshot</string>
    <string name="tracking_medication_label">Medication</string>
    <string name="tracking_symptom_label">Symptom</string>
    <string name="tracking_trigger_label">Trigger</string>
    <string name="triggers_button_edit">Edit Triggers</string>
    <string name="symptoms_duration_title">Duration</string>
    <string name="symptoms_duration_detail">Select one</string>
    <string name="severity">Severity</string>
    <string name="severity_none">None</string>
    <string name="severity_mild">Mild</string>
    <string name="severity_moderate">Moderate</string>
    <string name="severity_severe">Severe</string>
    <string name="start_time">Start time</string>
    <string name="add_note">Add note</string>
    <string name="pre_meds">Pre-meds</string>
    <string name="post_meds">Post-meds</string>
    <string name="duration_choice_now">Currently occurring</string>
    <string name="duration_choice_short_period">A short period of time</string>
    <string name="duration_choice_a_while">A little while</string>
    <string name="duration_choice_morning">All morning</string>
    <string name="duration_choice_afternoon">All afternoon</string>
    <string name="duration_choice_evening">All evening</string>
    <string name="symptoms_logging_time_button_default">Add time</string>
    <string name="symptoms_logging_duration_button_default">Add duration</string>
    <string name="introduction_title">Welcome to mPower</string>
    <string name="introduction_message">A Parkinson\'s Disease Research Study</string>
</resources>