<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO update icons for navigation -->
    <item
        android:id="@+id/navigation_logging"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_logging"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_history"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_insights"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_insights"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile"
        app:showAsAction="always|withText" />

</menu>
