<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ BSD 3-Clause License
  ~
  ~ Copyright 2018  Sage Bionetworks. All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted provided that the following conditions are met:
  ~
  ~ 1.  Redistributions of source code must retain the above copyright notice, this
  ~ list of conditions and the following disclaimer.
  ~
  ~ 2.  Redistributions in binary form must reproduce the above copyright notice,
  ~ this list of conditions and the following disclaimer in the documentation and/or
  ~ other materials provided with the distribution.
  ~
  ~ 3.  Neither the name of the copyright holder(s) nor the names of any contributors
  ~ may be used to endorse or promote products derived from this software without
  ~ specific prior written permission. No license is granted to the trademarks of
  ~ the copyright holders even if such marks are included in this software.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.MP.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/when_do_you_want_a_reminder"
        android:layout_margin="@dimen/margin_large"/>

    <Button
        style="@style/MPower.RoundedCornerMaterialButton"
        android:id="@+id/remind_me_in_2_hours_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mp_rounded_button_height"
        android:text="@string/remind_me_in_2_hours"
        android:layout_margin="@dimen/rsb_padding_large"/>

    <Button
        style="@style/MPower.RoundedCornerMaterialButton"
        android:id="@+id/remind_me_in_1_hour_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mp_rounded_button_height"
        android:background="?attr/selectableItemBackground"
        android:text="@string/remind_me_in_1_hour"
        android:layout_margin="@dimen/rsb_padding_large"/>

    <Button
        style="@style/MPower.RoundedCornerMaterialButton"
        android:id="@+id/remind_me_in_15_minutes_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mp_rounded_button_height"
        android:text="@string/remind_me_in_15_minutes"
        android:layout_margin="@dimen/rsb_padding_large"/>

    <Button
        style="@style/MPower.RoundedCornerMaterialButton"
        android:id="@+id/do_not_remind_me_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mp_rounded_button_height"
        android:text="@string/do_not_remind_me"
        android:layout_margin="@dimen/rsb_padding_large"/>

</LinearLayout>