<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ BSD 3-Clause License
  ~
  ~ Copyright 2021  Sage Bionetworks. All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted provided that the following conditions are met:
  ~
  ~ 1.  Redistributions of source code must retain the above copyright notice, this
  ~ list of conditions and the following disclaimer.
  ~
  ~ 2.  Redistributions in binary form must reproduce the above copyright notice,
  ~ this list of conditions and the following disclaimer in the documentation and/or
  ~ other materials provided with the distribution.
  ~
  ~ 3.  Neither the name of the copyright holder(s) nor the names of any contributors
  ~ may be used to endorse or promote products derived from this software without
  ~ specific prior written permission. No license is granted to the trademarks of
  ~ the copyright holders even if such marks are included in this software.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmation_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sageResearchPrimary"
    android:paddingTop="36dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_welcome"
            android:contentDescription="@string/phone_number"/>

        <TextView
            style="@style/TextAppearance.MP.Header"
            android:id="@+id/registration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction_title"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="16dp"
            android:paddingTop="16dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/registration_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction_message"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            style="@style/TextAppearance.MP.Body"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp"
            android:padding="@dimen/margin_medium">

            <com.google.android.material.button.MaterialButton
                style="@style/Sage.MaterialButton.Rounded"
                android:id="@+id/intro_next_button"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:textSize="16sp"
                android:text="@string/rsb_BUTTON_NEXT"
                android:layout_gravity="bottom"/>

        </FrameLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>